appId: com.example.careconnect
---
# E2E Test 2: SOS Emergency Button Flow
- launchApp

# Quick login to dashboard
- tapOn:
    text: "Login"
    index: 0
- assertVisible: "Emergency SOS button\nSOS EMERGENCY, Tap to request emergency assistance"
- tapOn: "Emergency SOS button\nSOS EMERGENCY, Tap to request emergency assistance"

#click on "Send SOS"
- tapOn: "Send SOS"